[package]
name = "machine"
version = "0.0.2"
description = "Virtual Machine"
repository = "https://github.com/GuilhermeWerner/Machine"
license = "MIT"
edition = "2021"
publish = false

[lib]
name = "Machine"
crate-type = ["rlib"]
path = "Source/lib.rs"

[dependencies]
bincode = "1.3.3"
bitflags = "1.3.2"
serde = { version = "1.0", features = ["derive"] }

[[example]]
name = "Simple"
path = "Examples/Simple.rs"

[[example]]
name = "Assembler"
path = "Examples/Assembler.rs"

[[example]]
name = "Loader"
path = "Examples/Loader.rs"
